# scripts

./: .deepsource.toml  .gitignore  .gitmodules  LICENSE  README.md  license.md  repo-to-prompt.codemod.js
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: generate_docs.yml  (+2 more)
bash/: alias.sh  clean-system.sh  fancy_motd.sh  gotify-send.sh  measure_volts_rpi.sh  nextcloud_snapshot.sh  scan_page.sh  status_motd_rpi.sh  update-system.sh
docs/: scripts.xls
notebooks/: Ultra_Torrent_Downloader.ipynb
openfaas-function/: .gitignore  README.md  pyproject.toml  repo-to-prompt.codemod.js  requirements.txt  stack.sample.yaml
openfaas-function/linkedin-send-connection-request/: .gitignore  handler.py  handler_test.py  requirements.txt
openfaas-function/linkedin-send-connection-request/prompts/: task.md.j2
openfaas-function/llm-global-spend/: handler.py  handler_test.py  requirements.txt
openfaas-function/spot-start-service/: developer.md  handler.py  handler_test.py  portainer.py  requirements.txt
osx/: setup_inital_macos_kk.sh
powershell/: Increase_DPI_Monitor.ps1  auto_wg_login_notification.ps1  start_xserver_and_connect_ssh.ps1  toggle_tv_when_hdmi.ps1
python/: cloudflare_create_dns_record.py  cloudflare_delete_dns_records.py  delete_old_file.py  instagram_list_unfollowers.py  login_notification.py  login_notification_ssm.py  macro_keyboard_companion.py  pyproject_generator.py  rclone_check_notify.py  record-kb-mouse-replay.py  remove_duplicates_zsh_history.py  trim_looped_video.py  tv-shutdown.py
vbs/: silent_spawn.vbs
(+29 files in other folders)
